--- a/sheet/style.css
+++ b/sheet/style.css
@@ -9,9 +9,15 @@ h1 {
     text-align: center;
 }
 
-input[type="file"] {
+input[type="file"], button {
     display: block;
     margin: 10px auto;
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 #sheetContainer {
@@ -37,19 +43,4 @@ th, td {
 
 th {
     background-color: #f2f2f2;
-}
-
-button {
-    display: block;
-    margin: 10px auto;
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-button:hover {
-    background-color: #0056b3;
 }
